<resources>
    <string name="app_name">Dear Mory</string>
    <string name="my_diaries">My Diaries</string>
    <string name="edit_mood">Edit Mood</string>
    <string name="add_images">Add Images</string>
    <string name="add_expense_income">Add Expense or Income</string>
    <string name="edit_diary_hint">How was your day?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_diary_button">Save Diary</string>
    <string name="notes">Notes</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="expense_income">Expense or Income</string>
    <string name="pick_time">Pick Time</string>
    <string name="input_amount_error">Must be more than one</string>
    <string name="input_amount_empty">Amount must be filled</string>
    <string name="input_amount_too_big">The amount is too big</string>
    <string name="success_save_expense_income">Success save expense or income</string>
    <string name="save">Save</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="confirm_delete_expense_income">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="uploading">Uploading...</string>
    <string name="upload_success">Image uploaded successfully</string>
    <string name="upload_failed">Failed to upload image</string>
    <string name="delete_image_success">Successfully delete image</string>
    <string name="uploaded">Uploaded</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="this_month">This Month</string>
    <string name="reminder_label_hint">Label</string>
    <string name="reminder_date_hint">Date</string>
    <string name="reminder_vibrate_hint">Vibrate</string>
    <string name="add_reminder_button">Add</string>
    <string name="repeat_reminder_label">Repeat</string>
    <string name="day_of_week_mo">Mo</string>
    <string name="day_of_week_tu">Tu</string>
    <string name="day_of_week_we">We</string>
    <string name="day_of_week_th">Th</string>
    <string name="day_of_week_fr">Fr</string>
    <string name="day_of_week_sa">Sa</string>
    <string name="day_of_week_su">Su</string>
    <string name="month_calendar_indicator_hint">month</string>
    <string name="setting">Setting</string>
    <string name="languages">LANGUAGES</string>
    <string name="english" translatable="false">English</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="text_size">TEXT SIZE</string>
    <string name="theme">THEME</string>
    <string name="dark_theme" translatable="false">Dark</string>
    <string name="galaxy_theme" translatable="false">Galaxy</string>
    <string name="light_theme" translatable="false">Light</string>
    <string name="small_size">Small</string>
    <string name="medium_size">Medium</string>
    <string name="large_size">Large</string>
    <string name="preview_text">Text Example</string>
    <string name="finish">FINISH</string>
    <string name="developer">By LT and RR</string>
    <string name="signout">SIGN OUT</string>
</resources>
