<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="375dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorWhite"
    android:padding="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp">

        <Button
            android:id="@+id/save_repeated_day_reminder_logo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/ico_tick_mark"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/su_day"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@drawable/ico_day_picker_non_active"
            android:gravity="center"
            android:text="@string/day_of_week_su"
            android:textColor="@color/whiteSmoke" />

        <TextView
            android:id="@+id/mo_day"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@drawable/ico_day_picker_non_active"
            android:gravity="center"
            android:text="@string/day_of_week_mo"
            android:textColor="@color/whiteSmoke" />

        <TextView
            android:id="@+id/tu_day"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@drawable/ico_day_picker_non_active"
            android:gravity="center"
            android:text="@string/day_of_week_tu"
            android:textColor="@color/whiteSmoke" />

        <TextView
            android:id="@+id/we_day"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@drawable/ico_day_picker_non_active"
            android:gravity="center"
            android:text="@string/day_of_week_we"
            android:textColor="@color/whiteSmoke" />

        <TextView
            android:id="@+id/th_day"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@drawable/ico_day_picker_non_active"
            android:gravity="center"
            android:text="@string/day_of_week_th"
            android:textColor="@color/whiteSmoke" />

        <TextView
            android:id="@+id/fr_day"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@drawable/ico_day_picker_non_active"
            android:gravity="center"
            android:text="@string/day_of_week_fr"
            android:textColor="@color/whiteSmoke" />

        <TextView
            android:id="@+id/sa_day"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@drawable/ico_day_picker_non_active"
            android:gravity="center"
            android:text="@string/day_of_week_sa"
            android:textColor="@color/whiteSmoke" />

    </LinearLayout>


</LinearLayout>