<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="272dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tv_confirmation_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete_expense_income"
        android:paddingVertical="20dp"
        android:paddingStart="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorIconWithBackground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_confirm_yes"
            android:layout_width="135dp"
            android:layout_height="48dp"
            android:text="@string/yes"
            android:background="@color/transparent"
            android:textColor="?attr/editTextColor"/>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="?attr/colorIconWithBackground"/>

        <Button
            android:id="@+id/btn_confirm_no"
            android:layout_width="135dp"
            android:layout_height="48dp"
            android:text="@string/no"
            android:background="@color/transparent"
            android:textColor="?attr/editTextColor"/>

    </LinearLayout>

</LinearLayout>