<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingActivity">

    <ImageView
        android:id="@+id/iv_main_background_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/dark"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundShading"/>

    <LinearLayout
        android:id="@+id/ll_for_setting_components"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:title="@string/setting"
            app:titleTextColor="?attr/editTextColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/languages"
                    android:textStyle="bold"
                    android:paddingVertical="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_indonesia_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/indonesia"
                        android:paddingVertical="15dp"
                        android:paddingHorizontal="10dp"/>

                    <ImageView
                        android:id="@+id/iv_indonesia_checklist"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ico_done"
                        android:layout_marginVertical="12dp"
                        android:layout_marginStart="-35dp"
                        android:visibility="gone"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/editTextColor"
                    android:layout_marginHorizontal="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_english_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/english"
                        android:paddingVertical="15dp"
                        android:paddingHorizontal="10dp"/>

                    <ImageView
                        android:id="@+id/iv_english_checklist"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ico_done"
                        android:layout_marginVertical="12dp"
                        android:layout_marginStart="-35dp"
                        android:visibility="gone"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?attr/componentBackgroundColor"
                android:alpha="0.3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_size"
                    android:textStyle="bold"
                    android:paddingVertical="8dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="?attr/componentBackgroundColor">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_small_font_size"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:textColor="@color/black"
                        android:text="@string/small_size"
                        android:button="@color/transparent"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:checked="true"
                        android:onClick="onRadioButtonClicked"
                        android:background="@color/transparent"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_medium_font_size"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:textColor="@color/black"
                        android:text="@string/medium_size"
                        android:button="@color/transparent"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:onClick="onRadioButtonClicked"
                        android:background="@color/transparent"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_large_font_size"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:textColor="@color/black"
                        android:text="@string/large_size"
                        android:button="@color/transparent"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:onClick="onRadioButtonClicked"
                        android:background="@color/transparent"/>

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="15dp">

                    <TextView
                        android:id="@+id/tv_text_size_preview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/preview_text"
                        android:paddingHorizontal="10dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?attr/componentBackgroundColor"
                android:alpha="0.3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme"
                    android:textStyle="bold"
                    android:paddingVertical="8dp"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">

                        <LinearLayout
                            android:id="@+id/ll_dark_theme_container"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginEnd="10dp">

                            <ImageView
                                android:id="@+id/iv_dark_theme_preview"
                                android:layout_width="144dp"
                                android:layout_height="300dp"
                                android:src="@drawable/dark_theme_preview"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dark_theme"
                                android:textAlignment="center"
                                android:textColor="@color/navBackgroundColorDarkTheme"
                                android:textStyle="bold"
                                android:layout_marginTop="-100dp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_galaxy_theme_container"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginEnd="10dp">

                            <ImageView
                                android:id="@+id/iv_galaxy_theme_preview"
                                android:layout_width="144dp"
                                android:layout_height="300dp"
                                android:src="@drawable/galaxy_theme_preview"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/galaxy_theme"
                                android:textAlignment="center"
                                android:textColor="@color/navBackgroundColorGalaxyTheme"
                                android:textStyle="bold"
                                android:layout_marginTop="-100dp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_light_theme_container"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginEnd="10dp">

                            <ImageView
                                android:id="@+id/iv_light_theme_preview"
                                android:layout_width="144dp"
                                android:layout_height="300dp"
                                android:src="@drawable/light_theme_preview"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/light_theme"
                                android:textAlignment="center"
                                android:textColor="@color/backgroundForIconLightTheme"
                                android:textStyle="bold"
                                android:layout_marginTop="-100dp"/>

                        </LinearLayout>

                    </LinearLayout>

                </HorizontalScrollView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>